git-annex (7.20190913) UNRELEASED; urgency=medium

  * Added --mimetype and --mimeencoding file matching options.
  * Added --unlocked and --locked file matching options.

 -- Joey Hess <id@joeyh.name>  Thu, 19 Sep 2019 11:11:19 -0400

git-annex (7.20190912) upstream; urgency=medium

  * Default to v7 for new repositories.
  * Automatically upgrade v5 repositories to v7.
  * Automatically convert direct mode repositories to v7 with adjusted
    unlocked branches and set annex.thin.
  * Added annex.autoupgraderepository configuration that can be set to false
    to prevent any automatic repository upgrades.
  * Refuse to upgrade direct mode repositories when git is older than 2.22,
    which fixed a memory leak that could cause an OOM during the upgrade.
  * Removed support for git versions older than 2.1.
  * assistant: When creating a new repository, no longer use direct
    mode, instead use v7 adjusted branches with annex.thin.
  * init: When run on a crippled filesystem with --version=5,
    will error out, since version 7 is needed for adjusted unlocked branch.
  * direct: This command always errors out as direct mode is no longer
    supported.
  * indirect: This command has become a deprecated noop.
  * proxy: This command is deprecated because it was only needed in direct
    mode. (But it continues to work.)
  * info: Removed the "repository mode" from its output (including the
    --json output) since with the removal of direct mode, there is no
    repository mode.
  * info: When file matching options are specified when getting
    info of something other than a directory, they won't have any effect,
    so error out to avoid confusion.
  * info: Display trust level when getting info on a uuid, same as a remote.
  * When upgrading a direct mode repo to v7 with adjusted unlocked branches,
    fix a bug that prevented annex.thin from taking effect for the files
    in working tree.
  * Avoid making a commit when upgrading from direct mode to v7.