@@ -2,6 +2,7 @@ git-annex (7.20190913) UNRELEASED; urgency=medium
 
   * Added --mimetype and --mimeencoding file matching options.
   * Added --unlocked and --locked file matching options.
+  * git-lfs: Only do endpoint discovery once when concurrency is enabled.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Sep 2019 11:11:19 -0400
 
